examples/test/testpolicy7724.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7724
  namespace: namespace384
spec:
  podSelector:
    matchLabels:
      key34: value3
      key45: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value37
      podSelector:
        matchLabels:
          key30: value24
          key0: value13
          key45: value47
